[*] Документация исправлена, чтобы чётко соответствовать предоставленному API
