# docs/swagger.json
@@ -2,9 +2,9 @@
     "swagger": "2.0",
     "info": {
         "description": "API для отбора на Стажировку в Авито",
-        "title": "Merch Market API",
+        "title": "API Avito shop",
         "contact": {},
-        "version": "1.0"
+        "version": "1.0.0"
     },
     "host": "localhost:8080",
     "basePath": "/api",
@@ -26,11 +26,11 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Авторизация",
+                "summary": "Аутентификация и получение JWT-токена.",
                 "parameters": [
                     {
                         "description": "Логин и пароль",
-                        "name": "auth",
+                        "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -40,30 +40,27 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Успешная аутентификация.",
                         "schema": {
                             "$ref": "#/definitions/handlers.AuthResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Неверный запрос.",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "Неавторизован.",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Внутренняя ошибка сервера.",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     }
                 }
@@ -83,7 +80,7 @@
                 "tags": [
                     "Merch"
                 ],
-                "summary": "Покупка мерча",
+                "summary": "Купить предмет за монеты.",
                 "parameters": [
                     {
                         "type": "string",
@@ -95,38 +92,27 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Успешный ответ",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "type": "null"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Неверный запрос.",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "Неавторизован.",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Внутренняя ошибка сервера.",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     }
                 }
@@ -146,26 +132,30 @@
                 "tags": [
                     "Info"
                 ],
-                "summary": "Информация о пользователе",
+                "summary": "Получить информацию о монетах, инвентаре и истории транзакций.",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Успешный ответ.",
                         "schema": {
                             "$ref": "#/definitions/handlers.InfoResponse"
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized",
+                    "400": {
+                        "description": "Неверный запрос.",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Неавторизован.",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Внутренняя ошибка сервера.",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     }
                 }
@@ -188,7 +178,7 @@
                 "tags": [
                     "Wallet"
                 ],
-                "summary": "Отправка монет",
+                "summary": "Отправить монеты другому пользователю.",
                 "parameters": [
                     {
                         "description": "Данные отправки монет",
@@ -202,38 +192,27 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Успешный ответ.",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "type": "null"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Неверный запрос.",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "Неавторизован.",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Внутренняя ошибка сервера.",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/handlers.ErrorResponse"
                         }
                     }
                 }
@@ -264,6 +243,23 @@
                 }
             }
         },
+        "handlers.CoinHistory": {
+            "type": "object",
+            "properties": {
+                "received": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handlers.CoinHistoryEntry"
+                    }
+                },
+                "sent": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handlers.CoinHistoryEntry"
+                    }
+                }
+            }
+        },
         "handlers.CoinHistoryEntry": {
             "type": "object",
             "properties": {
@@ -278,25 +274,24 @@
                 }
             }
         },
+        "handlers.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.InfoResponse": {
             "type": "object",
             "properties": {
                 "coinHistory": {
-                    "description": "история транзакций с монетами (ключи: received, sent)",
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/definitions/handlers.CoinHistoryEntry"
-                        }
-                    }
+                    "$ref": "#/definitions/handlers.CoinHistory"
                 },
                 "coins": {
-                    "description": "количество монет",
                     "type": "integer"
                 },
                 "inventory": {
-                    "description": "инвентарь",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/handlers.InventoryItem"
@@ -308,11 +303,9 @@
             "type": "object",
             "properties": {
                 "quantity": {
-                    "description": "количество предметов",
                     "type": "integer"
                 },
                 "type": {
-                    "description": "предмет",
                     "type": "string"
                 }
             }
